# imperivm

./: README.md
examples/: 2.im  3.im  4.im  and.im  composite_fn_calls.im  factorial.im  fib.im  or.im  ptr_test.im  void_fn.im
src/: main.c  meson.build
src/IR/: IR.c  IR_optimize.c  IR_print.c
src/backend/amd64/: amd64.c  amd64_translate.c
src/frontend/: lexer.c  parser.c  vector.c
src/include/: imperivm.h  vector.h
src/include/IR/: IR.h  IR_optimize.h  IR_print.h
src/include/backend/amd64/: amd64.h  amd64_asm.h
src/include/frontend/: lexer.h  parser.h
src/include/templates/: graph.h  hashmap.h  named_vector.h  set.h  vector.h
src/include/util/: alloc.h
src/util/: alloc.c
